--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
+@use 'sass:map';
 @use '@angular/material' as mat;
 // Plus imports for other components in your app.
 
@@ -9,10 +10,35 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
+$tictactoe-palette: (
+ 50: #ddf3f1,
+ 100: #aae2db,
+ 200: #6fd0c4,
+ 300: #14bdac,
+ 400: #00ae9a,
+ 500: #009e87,
+ 600: #00917a,
+ 700: #00806a,
+ 800: #00705b,
+ 900: #00543e,
+ contrast: (
+  50: rgba(black, 0.87),
+  100: rgba(black, 0.87),
+  200: rgba(black, 0.87),
+  300: white,
+  400: white,
+  500: white,
+  600: white,
+  700: white,
+  800: white,
+  900: white,
+ )
+);
+
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$ng-tictactoe-primary: mat.define-palette(mat.$indigo-palette);
+$ng-tictactoe-primary: mat.define-palette($tictactoe-palette);
 $ng-tictactoe-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
@@ -20,7 +46,7 @@ $ng-tictactoe-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$ng-tictactoe-theme: mat.define-light-theme((
+$ng-tictactoe-theme: mat.define-dark-theme((
   color: (
     primary: $ng-tictactoe-primary,
     accent: $ng-tictactoe-accent,
@@ -33,7 +59,20 @@ $ng-tictactoe-theme: mat.define-light-theme((
 // that you are using.
 @include mat.all-component-themes($ng-tictactoe-theme);
 
+$primary: mat.get-color-from-palette($ng-tictactoe-primary, 500);
+$accent:  mat.get-color-from-palette($ng-tictactoe-accent, 500);
+$warn:    mat.get-color-from-palette($ng-tictactoe-warn, 500);
+
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+body { 
+  margin: 0; 
+  font-family: Roboto, "Helvetica Neue", sans-serif; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #161B22;
+}
