--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,19 +1,7 @@
-<table class="board-table" >
-    <tbody>
-        <tr>
-            <td>Valore1</td>
-            <td>Valore2</td>
-            <td>Valore3</td>
-        </tr>
-        <tr>
-            <td>Valore1</td>
-            <td>Valore2</td>
-            <td>Valore3</td>
-        </tr>
-        <tr>
-            <td>Valore1</td>
-            <td>Valore2</td>
-            <td>Valore3</td>
-        </tr>
-    </tbody>
-</table>
+<h1>Is {{ game.turn.name }} turn</h1>
+
+<div class="board-table" >
+    <div *ngFor="let cell of game.board" (click)="playerMove(cell)" >
+        <img *ngIf="cell.move" src="assets/{{ cell.move.sign }}.png" style="height: 50px;width: 50px;;" [@fadeAnimation] >
+    </div>
+</div>
