--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -7,12 +7,19 @@
 
 .board-table {
     flex: 1 1 auto;
-    border-collapse: collapse;
-    border-style: hidden;
+    display: grid;
+    grid-template-columns: 33.3% 33.3% 33.3%;
+    grid-template-rows: 33.3% 33.3% 33.3%;
     margin-bottom: 1rem;
 }
 
-.board-table td {
+.board-table div {
     border: 8px solid rgb(black, 0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+h1 {
     text-align: center;
 }
