--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,9 +1,14 @@
 <h1>{{ game.turn.name }} turn</h1>
 
 <div class="board-table" >
-    <div *ngFor="let cell of game.board" (click)="playerMove(cell)" >
+
+    <div *ngFor="let cell of game.board" 
+        (click)="playerMove(cell)">
+
         <img *ngIf="cell.player" class="cell-sign" src="assets/{{ cell.player.sign }}.png" [@fadeAnimation] >
+
     </div>
+
 </div>
 
 <div *ngIf="game.outcome.length > 0" class="outcome-board" [@fadeAnimation]>
