--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -14,17 +14,36 @@
     grid-template-columns: 33.3% 33.3% 33.3%;
     grid-template-rows: 33.3% 33.3% 33.3%;
     margin-bottom: 1rem;
+    outline: 4px solid $primary;
 }
 
 .board-table div {
-    border: 8px solid rgb(black, 0.4);
+    border: 4px solid rgb(black, 0.2);
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
+.board-table div:nth-child(-n + 3) {
+    border-top: none;
+} 
+
+.board-table div:nth-child(3n  - 2) {
+    border-left: none;
+} 
+
+.board-table div:nth-child(3n) {
+    border-right: none;
+} 
+
+.board-table div:nth-child(n + 7) {
+    border-bottom: none;
+}
+
 h1 {
     text-align: center;
+    font-weight: bold;
+    color: rgb(black, 0.4);
 }
 
 .outcome-board {
@@ -43,10 +62,6 @@ h1 {
         margin-bottom: 1rem;
     }
 
-    & h1 {
-        font-weight: bold;
-        color: rgb(black, 0.4);
-    }
 }
 
 .cell-sign{
