adapted turn header

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,4 +1,6 @@
-<h1>{{ game.turn.name }} turn</h1>
+<h1>
+    <img class="turn-sign" src="assets/{{ game.turn.sign }}.png" [@fadeAnimation] > turn
+</h1>
 
 <div class="board-table" >
 
