--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -44,6 +44,9 @@ h1 {
     text-align: center;
     font-weight: bold;
     color: rgb(black, 0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .outcome-board {
@@ -67,4 +70,10 @@ h1 {
 .cell-sign{
     height: 50px;
     width: 50px;
+}
+
+.turn-sign{
+    height: 25px;
+    width: 25px;
+    margin-right: 0.5rem;
 }
